--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
             
             <div class="project-box">
                 <i class="uil uil-briefcase-alt"></i>
-                <h3>Online Proctoring System</h3>
-                <a href="https://github.com/divyanshsawant/onlineProctoringExam">
+                <h3>TimeStamp Micorservice</h3>
+                <a href="https://github.com/PravinChilkawar/boilerplate-project-timestamp.git">
                     <label>View Project</label>
                 </a>
             </div>
@@ -195,7 +195,7 @@
             <div class="project-box">
                 <i class="uil uil-briefcase-alt"></i>
                 <h3>Gesture Presentation Systems</h3>
-                <a href="https://github.com/divyanshsawant/onlineProctoringExam">
+                <a href="https://github.com/PravinChilkawar/Gesture-ppt-control.git">
                     <label>View Project</label>
                 </a>
             </div>
